--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,18 @@ body {
     color: #e6e5be;
     background-color: #151b29;
     font-size: 30px;
+    box-sizing: border-box;
 }
 
 /* Header */
 header {
-    background-color: #afae7a;
     color: #fff;
     padding: 10px 0;
-    background-color:#151b29;
+    /* background-color:#151b29; */
     text-transform: capitalize;
     font-family: "SUSE", sans-serif;
     font-size: 23px;
-
+    /* REALLY WANT TO ADD A SWEET SUBTLE WAVEFORM HERE */
 }
 
 nav {
@@ -26,11 +26,13 @@ nav {
     align-items:center;
     margin: 0 auto;
     padding: 0 2px;
+    background: linear-gradient(to bottom, #090d1747 0%, #151b29 80%), url("Images/background images/pawel-czerwinski-eybM9n4yrpE-unsplash.jpg") repeat-x 50% 28% / 400px auto;
+    
 }
 nav a {
 
     color:#ffa260;
-    padding: 1em 2em;
+    padding: 1em;
     font-size: 1em;
     text-decoration: none;
 }
@@ -100,6 +102,8 @@ nav ul {
     gap: 10px;
     list-style-type: none;
     border-width: 1em;
+    border-radius: 3px;
+    padding: 1em;
 }
 
 header li :hover {
@@ -117,9 +121,16 @@ h2 {
     text-transform: uppercase;
     text-align: center;
 }
+
+h3 {
+    font-size: 1em;
+    margin: .2em;
+    text-transform: uppercase;
+    font-weight: 300;
+}
 .hero {
     background: url(Images/yomex-owo-zRDoTgjDvCc-unsplash.jpg) no-repeat center center/cover;
-    height: 50vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -139,21 +150,19 @@ h1 {
     background-color:  #151b29;
     border: 2px solid;
     color: #ffa260;
-    border: 2px solid;
-    transition: border-color 200ms, color 200ms, transform 500ms, box-shadow 200ms;
+    transition: all 200ms ease;
     padding: 1em 2em;
     font-size: 1em;
     text-decoration: none;
     border-radius: 1rem;
-    display: inline;
+    display: inline-block;
 }
 
 .hero-content .btn:hover{
     border-color: #f1ff5c;
-
     color: white;
     box-shadow: 0 0.5em 0.5em -0.4em #f1ff5c;
-    transform: translateY(-0.5em);
+    transform: translateY(-6px);
     cursor: pointer;
 }
 
@@ -176,31 +185,48 @@ h1 {
     display: block;
 }
 /* Gear List */
-#table-box{
-    display: flex;
+
+.gear-list {
+    display: grid;
+    align-items: center;
     justify-content: center;
-    margin: 0 auto;
-    padding: 0 20px;
+    max-width: 1400px;
+    gap: 20px;
+    margin: 50px 20%;
+    text-align: left;
 }
-#gear-list table {
-    width: 50%;
-    border-collapse: collapse;
-    margin-bottom: 15px;
-    font-size: .8em;
+.gear-list p {
+    font-size: .8em
 
 }
-
-#gear-list tr:nth-child(even) {
-    background-color: rgba(114, 175, 182, 0.296);
+.gear-row {
+    display: flex;
+    grid-template-columns:1fr 1fr;
+    gap: 0px;
+    justify-content: center;
+    align-items: center;
+}
+.gear-list .icon-box img{
+    width: 8vh;
+    display: inline-block;
+    filter: invert(100%);
+    padding-right: 20px;
+    transition: all .7s ease;
+}
+.gear-list .gear-content{
+    padding: 20px;
+    width: 42vh;
+}
+.gear-list .gear-image img {
+    width: 25vh;
+    display: inline-block;
+    border-left: #e6e5be 1px solid;
+    padding: 10%;
+}
+.gear-list .icon-box img:hover{
+    transform: scale(1.1);
 }
 
-#gear-list tr:hover {
-    background-color: #dddddd49;
-}
-
-#Gear-list-header:hover {
-    background-color: #151b29;
-}
 /* Footer */
 footer {
     background-color: #1c222f;
@@ -228,6 +254,8 @@ footer p {
 
 @media(max-width: 1000px) {
 
+    nav a {
+        padding: 0;
     nav ul {
         flex-direction: column;
         gap: 0;
