--- a/styles.css
+++ b/styles.css
@@ -257,7 +257,61 @@ h1 {
 .gear-row:hover {
   transform: scale(1.04);
 }
-
+/* External Links */
+#external-links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.side-projects {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+.proj {
+  border-radius: 14%;
+  width: 150px;
+  height: 150px;
+  padding: 0px 50px;
+  border: 1px;
+  transition: all 0.7s ease;
+  position: relative;
+}
+.proj:hover {
+  transform: scale(1.04);
+}
+.copy-button {
+  background-color: #333;
+  color: white;
+  border: none;
+  width: 150px;
+  height: 150px;
+  border-radius: 14%;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: all 0.7s ease;
+}
+.link-img {
+  border-radius: 14%;
+}
+#text-copied-alert {
+  border-radius: 8px;
+  background-color: #1f2023;
+  color: #fff;
+  font-size: 0.7em;
+  position: absolute;
+  padding: 10px;
+  left: 50%;
+  /* transform: translateX(-40%);
+  transform: translateY(-11%); */
+  z-index: 1000;
+}
+.copy-button:hover {
+  background-color: #555;
+  transform: scale(1.04);
+}
 /* Contact Section*/
 .contact-form {
   display: flex;
