--- a/styles.css
+++ b/styles.css
@@ -297,16 +297,16 @@ h1 {
   border-radius: 14%;
 }
 #text-copied-alert {
+  border: 2px solid grey;
   border-radius: 8px;
   background-color: #1f2023;
   color: #fff;
-  font-size: 0.7em;
+  font-size: 0.5em;
   position: absolute;
   padding: 10px;
-  left: 50%;
-  /* transform: translateX(-40%);
-  transform: translateY(-11%); */
+  left: 51%;
   z-index: 1000;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .copy-button:hover {
   background-color: #555;
