(feat) Complete generator working as intended

--- a/templates/blog-index.html
+++ b/templates/blog-index.html
@@ -9,7 +9,7 @@
   <!-- Blog Index -->
   <section id="blog-index">
     <h2 style="margin-top: 100px;">All of my thoughts...</h2>
-    <div hx-get="/blog-list-preview/" hx-trigger="load"></div>
+    {{.BlogList}}
   </section>
 
   <!-- Footer Section -->
