--- a/templates/main.html
+++ b/templates/main.html
@@ -23,7 +23,7 @@
   <!-- Blog Index -->
   <section id="blog-index">
     <h2>Some of my thoughts...</h2>
-    <div hx-get="/blog-list-preview/" hx-trigger="load"></div>
+    {{.BlogListPreview}}
   </section>
 
   <!-- External Links Section -->
