--- a/templates/snippets/nav-bar.html
+++ b/templates/snippets/nav-bar.html
@@ -1,6 +1,6 @@
 <nav id="mainNavbar">
   <div class="logo" id="logo">
-    <a href="Home.html">Hugh Palmer<span class="spin"> \ </span>Audio<span class="quote">"Sounds
+    <a href="/">Hugh Palmer<span class="spin"> \ </span>Audio<span class="quote">"Sounds
         Rolling"</span></a>
   </div>
   <div class="hamburger">
@@ -16,10 +16,10 @@
       <a href="/blog/">Blog</a>
     </li>
     <li>
-      <a href="#aboutme">About</a>
+      <a href="/main/#aboutme">About</a>
     </li>
     <li>
-      <a href="#contact-form">Contact</a>
+      <a href="/main/#contact-form">Contact</a>
     </li>
   </ul>
 </nav>
