(feat) Styling and content ready to go

--- a/templates/blog-index.html
+++ b/templates/blog-index.html
@@ -6,15 +6,17 @@
 <body>
   {{.NavBar}}
 
-  <!-- Blog Index -->
-  <section id="blog-index">
-    <h2 style="margin-top: 100px;">All of my thoughts...</h2>
-    {{.BlogList}}
-  </section>
+  <div class="container">
+    <!-- Blog Index -->
+    <section id="blog-index">
+      <h2 style="margin-top: 100px;">All of my thoughts...</h2>
+      {{.BlogList}}
+    </section>
 
-  <!-- Footer Section -->
-  {{.Footer}}
-  <script src="../../index.js"></script>
+    <!-- Footer Section -->
+    {{.Footer}}
+    <script src="../../index.js"></script>
+  </div>
 </body>
 
 </html>
