--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -11,7 +11,7 @@
     </a>
   </div>
   <p>
-    Made by me &copy; 2026 Hugh Palmer Audio - Melbourne Sound Recordist. All rights
+    Made by me &copy; 2026 Hugh Palmer - Melbourne Australia. All rights
     reserved.
   </p>
 </footer>
