--- a/templates/snippets/blog-list.html
+++ b/templates/snippets/blog-list.html
@@ -7,6 +7,7 @@
         <div class="blog-list-title">{{.Title}}</div>
         <div class="blog-list-description">{{.Description}}</div>
       </a>
+      <div class="blog-list-views">{{`{{.Views}}`}}</div>
     </li>
     {{end}}
   </ol>
